[Redesign] Fix alignment of icon/grip on ObjectList
Summary:
Ref T8099, these should sit in a 4px gutter.

Also:
- remove bad route on feed
- Fix issue with custom logos
- Fix unit error

Test Plan: Review on dashboards and on Maniphest homepage

Reviewers: btrahan, epriestley

Reviewed By: epriestley

Subscribers: epriestley, Korvin

Maniphest Tasks: T8099

Differential Revision: https://secure.phabricator.com/D13310

--- a/webroot/rsrc/css/phui/phui-object-item-list-view.css
+++ b/webroot/rsrc/css/phui/phui-object-item-list-view.css
@@ -116,7 +116,7 @@ ul.phui-object-item-list-view {
   top: 0;
   bottom: 0;
   left: 0;
-  width: 16px;
+  width: 20px;
   background: url('/rsrc/image/texture/grip.png') center center no-repeat;
 }
 
@@ -151,6 +151,7 @@ ul.phui-object-item-list-view {
   width: 20px;
   display: table-cell;
   vertical-align: middle;
+  padding-left: 4px;
 }
 
 .device-phone .phui-object-item-col0 {
